# TaskManagementTool

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tests/: test_main.py
tmt/: crud_base.py  crud_sql.py  database.py  main.py  models.py  services.py
